Add rabbit mq and event publisher. Update event store

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,14 @@ services:
       POSTGRES_PASSWORD: uala_db_password
     volumes:
       - ./migrations/postgres:/docker-entrypoint-initdb.d
-
+  rabbitmq:
+    image: "rabbitmq:3-management"
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
 
   command-app:
     build:
