--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ version: '3'
 services:
   postgres:
     image: postgres:9.5
+    restart: always
     hostname: postgres
     ports:
       - "5432:5432"
